# Rpp

./: Cargo.toml  README.md  build.rs
catr/: Cargo.toml
catr/src/: lib.rs
catr/tests/: cli.rs
catr/tests/inputs/: fox.txt
echor/: Cargo.toml  mk-outs.sh
echor/src/: main.rs
echor/tests/: cli.rs
echor/tests/expected/: hello2.txt
src/: args.rs  main.rs
tests/: cli.rs
