[package]
name = "rppm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rppm"
path = "src/main.rs"
doc = false

[dependencies]
clap = { version = "4.4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.2.1"
clap_mangen = "0.2.10"
color-print = "0.3.6"
chrono = { version = "0.4.24", default-features = false, features = ["clock", "std"] }
semver = "1"
serde = { version = "1.0.184", features = ["derive"] }
serde_json = "1"

[build-dependencies]
chrono = { version = "0.4.24", default-features = false, features = ["clock", "std"] }
clap = { version = "4.4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.2.1"
clap_mangen = "0.2.10"
color-print = "0.3.6"
semver = "1"
